fix default section order problem

--- a/test.ini
+++ b/test.ini
@@ -28,7 +28,8 @@ name = Nassura5
 name = Nassura4
 name = Nassura3
 name = Nassura2
-name = Nassura1
+name = Nassura1 刘佳英 123
+地址 = 福建省福州市
 [test section]
 content = nothing ;;
 about = abc
