--- a/test1.ini
+++ b/test1.ini
@@ -1,6 +1,8 @@
+3 = liujiaying hahaha
 [1]
-name = Nassura1
+name = Nassura1 刘佳英 123
 age = 25
+地址 = 福建省福州市
 bansdf = dsfasf3e
 [test section]
 content = nothing ;;
@@ -10,5 +12,3 @@ name = none
 nothing = 
 [test section 234]
 name = liujiayinmmg
-[2]
-3 = liujiaying hahaha
