add erase and clear interfaces

--- a/test.ini
+++ b/test.ini
@@ -1,3 +1,30 @@
+name =  sdfasd = Nassurah
+Nassurag = 123123 er
+Nassuraf = 123123 asdf
+Nassurad = 123123 asdfwer
+Nassuras = 123123 wer sd
+Nassuraa = 123123 sfqweasd
+Nassurap = 123123 asdfwerf ;
+Nassurap = 123123 sadfwqefasdf
+Nassurao = 123123 ewhy
+Nassurai = 123123 gh 43
+Nassurau = 123123 sdg4 sdrf+_)
+Nassuray = 123123 dsf43 4537624 ';dsf的
+Nassurat = 123123 撒地方
+Nassurar = 123123 广泛的还是
+Nassurae = 123123  说打个5  当时法国
+Nassuraw = 123123 岁的法国和广泛的
+Nassuraq = 123123 
+Nassura0 = 123123 跟456 电饭锅 
+Nassura9 = 123123 45以上的的风格54 的风格
+Nassura8 = 123123 过我也是豆腐干大师傅
+Nassura7 = 123123 4356 豆腐干4 头顶上飞过当时法国
+Nassura6 = 123123 
+Nassura5 = 123123 4(⊙﹏⊙)6而453 的风格上单
+Nassura4 = 123123  式风格
+Nassura3 = 123123 546让他高房价和游客
+Nassura2 = 123123 简约大方功耗5 大方功耗45 
+Nassura1 = 123123 5太6 富贵花5一日电泰国的风格
 [1]
 name = liujiaying
 age = 25
@@ -30,14 +57,148 @@ name = Nassura3
 name = Nassura2
 name = Nassura1 刘佳英 123
 地址 = 福建省福州市
+name = liujiayinmmgname = Nassurah
+Nassurag = 123123 er
+Nassuraf = 123123 asdf
+Nassurad = 123123 asdfwer
+Nassuras = 123123 wer sd
+Nassuraa = 123123 sfqweasd
+Nassurap = 123123 asdfwerf ;
+Nassurap = 123123 sadfwqefasdf
+Nassurao = 123123 ewhy
+Nassurai = 123123 gh 43
+Nassurau = 123123 sdg4 sdrf+_)
+Nassuray = 123123 dsf43 4537624 ';dsf的
+Nassurat = 123123 撒地方
+Nassurar = 123123 广泛的还是
+Nassurae = 123123  说打个5  当时法国
+Nassuraw = 123123 岁的法国和广泛的
+Nassuraq = 123123 
+Nassura0 = 123123 跟456 电饭锅 
+Nassura9 = 123123 45以上的的风格54 的风格
+Nassura8 = 123123 过我也是豆腐干大师傅
+Nassura7 = 123123 4356 豆腐干4 头顶上飞过当时法国
+Nassura6 = 123123 
+Nassura5 = 123123 4(⊙﹏⊙)6而453 的风格上单
+Nassura4 = 123123  式风格
+Nassura3 = 123123 546让他高房价和游客
+Nassura2 = 123123 简约大方功耗5 大方功耗45 
+Nassura1 = 123123 5太6 富贵花5一日电泰国的风格
 [test section]
 content = nothing ;;
 about = abc
 name = none
+name = liujiayinmmgname = Nassurah
+Nassurag = 123123 er
+Nassuraf = 123123 asdf
+Nassurad = 123123 asdfwer
+Nassuras = 123123 wer sd
+Nassuraa = 123123 sfqweasd
+Nassurap = 123123 asdfwerf ;
+Nassurap = 123123 sadfwqefasdf
+Nassurao = 123123 ewhy
+Nassurai = 123123 gh 43
+Nassurau = 123123 sdg4 sdrf+_)
+Nassuray = 123123 dsf43 4537624 ';dsf的
+Nassurat = 123123 撒地方
+Nassurar = 123123 广泛的还是
+Nassurae = 123123  说打个5  当时法国
+Nassuraw = 123123 岁的法国和广泛的
+Nassuraq = 123123 
+Nassura0 = 123123 跟456 电饭锅 
+Nassura9 = 123123 45以上的的风格54 的风格
+Nassura8 = 123123 过我也是豆腐干大师傅
+Nassura7 = 123123 4356 豆腐干4 头顶上飞过当时法国
+Nassura6 = 123123 
+Nassura5 = 123123 4(⊙﹏⊙)6而453 的风格上单
+Nassura4 = 123123  式风格
+Nassura3 = 123123 546让他高房价和游客
+Nassura2 = 123123 简约大方功耗5 大方功耗45 
+Nassura1 = 123123 5太6 富贵花5一日电泰国的风格
 [test section123]
 nothing =
+name = liujiayinmmgname = Nassurah
+Nassurag = 123123 er
+Nassuraf = 123123 asdf
+Nassurad = 123123 asdfwer
+Nassuras = 123123 wer sd
+Nassuraa = 123123 sfqweasd
+Nassurap = 123123 asdfwerf ;
+Nassurap = 123123 sadfwqefasdf
+Nassurao = 123123 ewhy
+Nassurai = 123123 gh 43
+Nassurau = 123123 sdg4 sdrf+_)
+Nassuray = 123123 dsf43 4537624 ';dsf的
+Nassurat = 123123 撒地方
+Nassurar = 123123 广泛的还是
+Nassurae = 123123  说打个5  当时法国
+Nassuraw = 123123 岁的法国和广泛的
+Nassuraq = 123123 
+Nassura0 = 123123 跟456 电饭锅 
+Nassura9 = 123123 45以上的的风格54 的风格
+Nassura8 = 123123 过我也是豆腐干大师傅
+Nassura7 = 123123 4356 豆腐干4 头顶上飞过当时法国
+Nassura6 = 123123 
+Nassura5 = 123123 4(⊙﹏⊙)6而453 的风格上单
+Nassura4 = 123123  式风格
+Nassura3 = 123123 546让他高房价和游客
+Nassura2 = 123123 简约大方功耗5 大方功耗45 
+Nassura1 = 123123 5太6 富贵花5一日电泰国的风格
 [test section 234]
-name = liujiayinmmg
+name = liujiayinmmgname = Nassurah
+Nassurag = 123123 er
+Nassuraf = 123123 asdf
+Nassurad = 123123 asdfwer
+Nassuras = 123123 wer sd
+Nassuraa = 123123 sfqweasd
+Nassurap = 123123 asdfwerf ;
+Nassurap = 123123 sadfwqefasdf
+Nassurao = 123123 ewhy
+Nassurai = 123123 gh 43
+Nassurau = 123123 sdg4 sdrf+_)
+Nassuray = 123123 dsf43 4537624 ';dsf的
+Nassurat = 123123 撒地方
+Nassurar = 123123 广泛的还是
+Nassurae = 123123  说打个5  当时法国
+Nassuraw = 123123 岁的法国和广泛的
+Nassuraq = 123123 
+Nassura0 = 123123 跟456 电饭锅 
+Nassura9 = 123123 45以上的的风格54 的风格
+Nassura8 = 123123 过我也是豆腐干大师傅
+Nassura7 = 123123 4356 豆腐干4 头顶上飞过当时法国
+Nassura6 = 123123 
+Nassura5 = 123123 4(⊙﹏⊙)6而453 的风格上单
+Nassura4 = 123123  式风格
+Nassura3 = 123123 546让他高房价和游客
+Nassura2 = 123123 简约大方功耗5 大方功耗45 
+Nassura1 = 123123 5太6 富贵花5一日电泰国的风格
 [1]
 bansdf = dsfasf3e
 asdfasd3
+name = liujiayinmmgname = Nassurah
+Nassurag = 123123 er
+Nassuraf = 123123 asdf
+Nassurad = 123123 asdfwer
+Nassuras = 123123 wer sd
+Nassuraa = 123123 sfqweasd
+Nassurap = 123123 asdfwerf ;
+Nassurap = 123123 sadfwqefasdf
+Nassurao = 123123 ewhy
+Nassurai = 123123 gh 43
+Nassurau = 123123 sdg4 sdrf+_)
+Nassuray = 123123 dsf43 4537624 ';dsf的
+Nassurat = 123123 撒地方
+Nassurar = 123123 广泛的还是
+Nassurae = 123123  说打个5  当时法国
+Nassuraw = 123123 岁的法国和广泛的
+Nassuraq = 123123 
+Nassura0 = 123123 跟456 电饭锅 
+Nassura9 = 123123 45以上的的风格54 的风格
+Nassura8 = 123123 过我也是豆腐干大师傅
+Nassura7 = 123123 4356 豆腐干4 头顶上飞过当时法国
+Nassura6 = 123123 
+Nassura5 = 123123 4(⊙﹏⊙)6而453 的风格上单
+Nassura4 = 123123  式风格
+Nassura3 = 123123 546让他高房价和游客
+Nassura2 = 123123 简约大方功耗5 大方功耗45 
+Nassura1 = 123123 5太6 富贵花5一日电泰国的风格
